--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
   "author": "Aggiovato",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-ejs-layouts": "^2.5.1",
     "mongoose": "^8.8.4",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.5.9",
