--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:ui": "@powershell Remove-Item -Recurse -Force dist && cd ../full-stack-open/part2/phonebook && npm run build && @powershell Copy-Item dist -Recurse ../../../phonebook-server",
     "deploy": "fly deploy",
     "deploy:full": "npm run build:ui && npm run deploy",
-    "logs:prod": "fly logs"
+    "logs:prod": "fly logs",
+    "lint": "eslint ."
   },
   "author": "Aggiovato",
   "license": "ISC",
@@ -25,6 +26,10 @@
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.5.9",
+    "@stylistic/eslint-plugin-js": "^2.12.1",
+    "eslint": "^9.17.0",
+    "eslint-plugin-react": "^7.37.2",
+    "globals": "^15.13.0",
     "nodemon": "^3.1.7"
   }
 }
